--- a/index.html
+++ b/index.html
@@ -48,23 +48,24 @@
             </div>
         </nav>
         <div class="banner">
+            <img src="./img/bg.png" class="banner__bg" alt="">
             <div class="container banner__wrap">
                 <div class="banner__desc">
                     <h1 class="banner__desc-h">Kong: Skull Island</h1>
                     <p class="banner__desc-p">The film takes the viewer to the 70s of the last century. The protagonist
                         organizes an expedition to the Skull island, always covered in fog, on which King Kong was once
                         caught to find the missing brother and some mysterious substance. During...</p>
-                    <div class="banner__btn">
+                    <div class="banner__btns">
                         <button class="btn banner__btns-btn">
                             Watch now
                         </button>
                         <button class="btn banner__btns-btn">
                             Download
                         </button>
-            
+
                     </div>
                 </div>
-                
+
             </div>
 
         </div>
