--- a/index.html
+++ b/index.html
@@ -23,30 +23,31 @@
                     See no special offer restrictions
                 </p>
             </div>
-            <div class="navbar">
-                <div class="container navbar__wrap">
-                    <a href="#" class="logo">
-                        <img src="./img/logo.svg" class="logo__png" alt="">
-                        cinemas
-                    </a>
-                    <ul class="navbar__list">
-                        <li class="navbar__list-item">
-                            <a href="#" class="navbar__list-item-link">films</a>
-                        </li>
-                        <li class="navbar__list-item">
-                            <a href="#" class="navbar__list-item-link">Serials</a>
-                        </li>
-                        <li class="navbar__list-item">
-                            <a href="#" class="navbar__list-item-link">Cartoons</a>
-                        </li>
-                        <li class="navbar__list-item">
-                            <a href="#" class="navbar__list-item-link">Collections</a>
-                        </li>
-                    </ul>
-                </div>
-
-            </div>
         </nav>
+        <div class="navbar">
+            <div class="container navbar__wrap">
+                <a href="#" class="logo">
+                    <img src="./img/logo.svg" class="logo__png" alt="">
+                    cinemas
+                </a>
+                <ul class="navbar__list">
+                    <li class="navbar__list-item">
+                        <a href="#" class="navbar__list-item-link">films</a>
+                    </li>
+                    <li class="navbar__list-item">
+                        <a href="#" class="navbar__list-item-link">Serials</a>
+                    </li>
+                    <li class="navbar__list-item">
+                        <a href="#" class="navbar__list-item-link">Cartoons</a>
+                    </li>
+                    <li class="navbar__list-item">
+                        <a href="#" class="navbar__list-item-link">Collections</a>
+                    </li>
+                </ul>
+            </div>
+
+        </div>
+
         <div class="banner">
             <img src="./img/bg.png" class="banner__bg" alt="">
             <div class="container banner__wrap">
@@ -70,6 +71,24 @@
 
         </div>
     </header>
+    <div class="films">
+        <div class="container">
+            <h2 class="title">films</h2>
+            <div class="films__wrap">
+                <div class="films__card">
+                    <img src="./img/film1.png" class="film__card-img" alt="">
+                    <div class="films__card-body">
+                        <span class="films__span-item"><i class="fad fa-play"></i></span>
+                        <p class="film__card-time">2:14:33</p>
+                        <h3 class="film__card-title">Black Panther</h3>
+                        <p class="film__card-desc">At first glance, you can decide that Wakanda is an ordinary territory
+                            of wild Africa, but this is not so. Here, in the bowels of the desert lands, there are
+                            hidden deposits of a unique metal capable of absorbing...</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
