--- a/index.html
+++ b/index.html
@@ -86,6 +86,37 @@
                             hidden deposits of a unique metal capable of absorbing...</p>
                     </div>
                 </div>
+                <div class="films__card">
+                    <img src="./img/film1.png" class="film__card-img" alt="">
+                    <div class="films__card-body">
+                        <span class="films__span-item"><i class="fad fa-play"></i></span>
+                        <p class="film__card-time">2:14:33</p>
+                        <h3 class="film__card-title">Black Panther</h3>
+                        <p class="film__card-desc">At first glance, you can decide that Wakanda is an ordinary territory
+                            of wild Africa, but this is not so. Here, in the bowels of the desert lands, there are
+                            hidden deposits of a unique metal capable of absorbing...</p>
+                    </div>
+                </div>
+
+                <div class="films__card">
+                    <img src="./img/film3.png" class="film__card-img" alt="">
+                    <div class="films__card-body">
+                        <span class="films__span-item"><i class="fad fa-play"></i></span>
+                        <p class="film__card-time">1:53:45</p>
+                        <h3 class="film__card-title">The Gentlemen</h3>
+                        <p class="film__card-desc">One cunning American, from his student years, had been selling drugs, and now he came up with a scheme of illegal enrichment using the estates of an impoverished English aristocracy and made a very good fortune on <div class=""></div></p>
+                    </div>
+                </div>
+                <div class="films__card">
+                    <img src="./img/film4.png" class="film__card-img" alt="">
+                    <div class="films__card-body">
+                        <span class="films__span-item"><i class="fad fa-play"></i></span>
+                        <p class="film__card-time">2:58:20</p>
+                        <h3 class="film__card-title">The Lord of the...n</h3>
+                        <p class="film__card-desc">Tales of Middle-earth is a chronicle of the Great War for the Ring, a war that lasted more than one thousand years. The one who owned the Ring received power over all living creatures, but was obliged to serve evil...fortune on <div class=""></div>
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
