--- a/index.html
+++ b/index.html
@@ -104,7 +104,10 @@
                         <span class="films__span-item"><i class="fad fa-play"></i></span>
                         <p class="film__card-time">1:53:45</p>
                         <h3 class="film__card-title">The Gentlemen</h3>
-                        <p class="film__card-desc">One cunning American, from his student years, had been selling drugs, and now he came up with a scheme of illegal enrichment using the estates of an impoverished English aristocracy and made a very good fortune on <div class=""></div></p>
+                        <p class="film__card-desc">One cunning American, from his student years, had been selling drugs,
+                            and now he came up with a scheme of illegal enrichment using the estates of an impoverished
+                            English aristocracy and made a very good fortune on <div class=""></div>
+                        </p>
                     </div>
                 </div>
                 <div class="films__card">
@@ -113,10 +116,27 @@
                         <span class="films__span-item"><i class="fad fa-play"></i></span>
                         <p class="film__card-time">2:58:20</p>
                         <h3 class="film__card-title">The Lord of the...n</h3>
-                        <p class="film__card-desc">Tales of Middle-earth is a chronicle of the Great War for the Ring, a war that lasted more than one thousand years. The one who owned the Ring received power over all living creatures, but was obliged to serve evil...fortune on <div class=""></div>
+                        <p class="film__card-desc">Tales of Middle-earth is a chronicle of the Great War for the Ring, a
+                            war that lasted more than one thousand years. The one who owned the Ring received power over
+                            all living creatures, but was obliged to serve evil...fortune on <div class=""></div>
                         </p>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+    <div class="trailer">
+        <video src="./video/video.mp4" class="trailer__video" autoplay muted loop></video>
+        <div class="container">
+            <div class="trailer__desc">
+                <img src="./img/trailer.png" alt="" class="trailer__desc-img">
+                <p class="trailer__desc-p">
+                    After the events at the Leipzig-Halle airport, Natasha was overtaken by the mistakes of the past.
+                    The Red Room again made itself felt - a program to create Widows - professional killers and spies -
+                    just like her. Natasha decides once and for all to deal with people whose efforts she herself became
+                    a Widow.
+                </p>
+                <button class="btn trailer__btn">Watch now</button>
             </div>
         </div>
     </div>
